--- a/InitialProject/InitialProject/View/Guest1/ForumPage.xaml
+++ b/InitialProject/InitialProject/View/Guest1/ForumPage.xaml
@@ -8,16 +8,16 @@
 
     <Canvas Background="White">
         <Label Content="List of all discussions:" Canvas.Top="12" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <DataGrid ItemsSource="{Binding Path=Forums, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedForum}" AutoGenerateColumns="False" Height="413" Width="1588" FontSize="20" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="2" MouseLeftButtonUp="MouseLeftButtonUp">
-            <DataGrid.Columns>                
-                <DataGridTextColumn Width="*" Header="City" Binding="{Binding City}"/>
-                <DataGridTextColumn Width="*" Header="Country" Binding="{Binding Country}"/>
+        <DataGrid ItemsSource="{Binding Path=Forums, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding SelectedForum}" AutoGenerateColumns="False" Height="426" Width="1588" FontSize="20" Canvas.Top="50" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="2" MouseLeftButtonUp="MouseLeftButtonUp">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="240" Header="City" Binding="{Binding City}"/>
+                <DataGridTextColumn Width="240" Header="Country" Binding="{Binding Country}"/>
                 <DataGridTextColumn Width="*" Header="Number of replies" Binding="{Binding NumberOfReplies}"/>
                 <DataGridTextColumn Width="*" Header="Status(is discussion still open)" Binding="{Binding IsActive}"/>
                 <DataGridTextColumn Width="*" Header="User that started discussion" Binding="{Binding Guest1.Username}"/>
                 <DataGridTextColumn Width="*" Header="Very useful" Binding="{Binding VeryUseful}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Start new discussion" Canvas.Top="492" FontSize="20" Height="41" Width="228" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="2" Click="Button_Click"/>
+        <Button Content="Start new discussion" Canvas.Top="510" FontSize="20" Height="33" Width="228" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="2" Click="Button_Click"/>
     </Canvas>
 </Page>
