--- a/InitialProject/InitialProject/View/Guest1/Guest1Overview.xaml
+++ b/InitialProject/InitialProject/View/Guest1/Guest1Overview.xaml
@@ -1,83 +1,29 @@
-﻿<Window x:Class="TravelAgency.View.Guest1Overview"
+﻿<Page x:Class="TravelAgency.View.Guest1Overview"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View"
         mc:Ignorable="d"
-        Title="https://travel-agency.com/home" Height="1080" Width="1920"
-        WindowState="Maximized">
-    <Grid Loaded="OnLoad">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <ToggleButton Width="47" Height="22" Content="" HorizontalAlignment="Left" Canvas.Left="506" Canvas.Top="168" VerticalAlignment="Top" Margin="1849,48,0,0">
-            <ToggleButton.Template>
-                <ControlTemplate TargetType="ToggleButton">
-                    <Grid>
-                        <Border Background="#EEEEEE" CornerRadius="10" BorderThickness="1" BorderBrush="#DCDCDC">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                        <Ellipse x:Name="Switch" Fill="White" Width="14" Height="14" HorizontalAlignment="Left" Margin="5,4,0,4">
-                            <Ellipse.RenderTransform>
-                                <TranslateTransform X="0"/>
-                            </Ellipse.RenderTransform>
-                        </Ellipse>
-                    </Grid>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsChecked" Value="True">
-                            <Setter TargetName="Switch" Property="Fill" Value="#C5E1A5"/>
-                            <Setter TargetName="Switch" Property="RenderTransform">
-                                <Setter.Value>
-                                    <TranslateTransform X="22"/>
-                                </Setter.Value>
-                            </Setter>
-                        </Trigger>
-                        <Trigger Property="IsChecked" Value="False">
-                            <Setter TargetName="Switch" Property="Fill" Value="white"/>
-                            <Setter TargetName="Switch" Property="RenderTransform">
-                                <Setter.Value>
-                                    <TranslateTransform X="0"/>
-                                </Setter.Value>
-                            </Setter>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>
-            </ToggleButton.Template>
-        </ToggleButton>
+        Title="https://travel-agency.com/home" Height="1080" Width="1920">
+    <Canvas Background="White" Loaded="OnLoad">
         <Line X1="0" Y1="0" X2="1590" Y2="0" Stroke="Black" StrokeThickness="1" Margin="165,772,165,160" />
-        <Label Content="Get in touch with us" HorizontalAlignment="Center" Margin="0,790,0,0" VerticalAlignment="Top" FontSize="32"/>
+        <Label Content="Get in touch with us" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="32" Canvas.Left="814" Canvas.Top="778"/>
         <Label Content="Email" HorizontalAlignment="Left" Margin="165,875,0,0" VerticalAlignment="Top" FontSize="24"/>
         <Label Content="travelagency@gmail.com" HorizontalAlignment="Left" Margin="165,923,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <Label Content="Social media" HorizontalAlignment="Center" Margin="0,875,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label Content="Social media" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="24" Canvas.Left="886" Canvas.Top="866"/>
         <Label Content="Adress" HorizontalAlignment="Left" Margin="1674,875,0,0" VerticalAlignment="Top" FontSize="24"/>
         <Label Content="Petra Petrovica 14, Novi Sad" HorizontalAlignment="Left" Margin="1498,923,0,0" VerticalAlignment="Top" FontSize="20"/>
-        <Grid HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,-30,0,0">
-            <Image x:Name="Image" HorizontalAlignment="Left" Height="166" VerticalAlignment="Top" Width="698" Source="/Resources/Images/Ta.jpg" Stretch="None" Margin="16,16,0,0" MouseLeftButtonUp="Image_MouseLeftButtonUp" MouseEnter="Image_MouseEnter" MouseLeave="Image_MouseLeave"/>
-        </Grid>
-
+        <Image x:Name="Image" HorizontalAlignment="Left" Height="166" VerticalAlignment="Top" Width="698" Source="/Resources/Images/Ta.jpg" Stretch="None" Margin="10,-14,0,0" MouseLeftButtonUp="Image_MouseLeftButtonUp" MouseEnter="Image_MouseEnter" MouseLeave="Image_MouseLeave"/>
         <Button Content="Search accommodations"  HorizontalAlignment="Left" Margin="722,48,0,0" VerticalAlignment="Top" Height="63" Width="252" FontSize="20" Click="OpenGuest1Form"/>
         <Button Content="Make a reservation"  Click="OpenReserveForm" HorizontalAlignment="Left" Margin="974,48,0,0" VerticalAlignment="Top" Height="63" Width="251" FontSize="20"/>
         <Button Content="Account" Click="OpenAccount" HorizontalAlignment="Left" Margin="1225,48,0,0" VerticalAlignment="Top" Height="63" Width="252" FontSize="20"/>
         <Button x:Name="Forum" Content="Forum" HorizontalAlignment="Left" Margin="1477,48,0,0" VerticalAlignment="Top" Height="63" Width="251" FontSize="20" Click="OpenForum"/>
-        <ComboBox x:Name="cbLanguage" HorizontalAlignment="Left" Margin="1751,79,0,0" FontSize="16" VerticalAlignment="Top" Width="147" Height="32">
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <Image Source="/Resources/Images/language.png" Width="24" Height="24" Margin="0,0,5,0"/>
-                        <TextBlock Text="{Binding}" />
-                    </StackPanel>
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
-        <Label Content="Dark theme" HorizontalAlignment="Left" Margin="1747,43,0,0" VerticalAlignment="Top" FontSize="16"/>
 
         <Frame NavigationUIVisibility="Hidden" x:Name="ShowPage" Canvas.Top="0" Margin="165,192,165,292"/>
-        <Image x:Name="Facebook" MouseEnter="Facebook_MouseEnter" MouseLeave="Facebook_MouseLeave" HorizontalAlignment="Left" Height="37" Margin="890,917,0,0" VerticalAlignment="Top" Width="37" Source="/Resources/Images/facebook-logo-493.png" MouseLeftButtonUp="Facebook_MouseLeftButtonUp"/>
-        <Image x:Name="Instagram" HorizontalAlignment="Left" Height="55" Margin="983,909,0,0" VerticalAlignment="Top" Width="55" Source="/Resources/Images/logo-instagram-png-2430.png" MouseLeftButtonUp="Instagram_MouseLeftButtonUp" MouseEnter="Instagram_MouseEnter" MouseLeave="Instagram_MouseLeave"/>
-        <Image x:Name="Twitter" HorizontalAlignment="Center" Height="56" Margin="0,908,0,0" VerticalAlignment="Top" Width="56" Source="/Resources/Images/logo-twitter-png-5859.png" MouseLeftButtonUp="Twitter_MouseLeftButtonUp" MouseEnter="Twitter_MouseEnter" MouseLeave="Twitter_MouseLeave"/>
-    </Grid>
-</Window>
+        <Image x:Name="Facebook" MouseEnter="Facebook_MouseEnter" MouseLeave="Facebook_MouseLeave" HorizontalAlignment="Center" Height="37"  VerticalAlignment="Top" Width="37" Source="/Resources/Images/facebook-logo-493.png" MouseLeftButtonUp="Facebook_MouseLeftButtonUp" Canvas.Left="886" Canvas.Top="909"/>
+        <Image x:Name="Instagram"  HorizontalAlignment="Center" Height="55" VerticalAlignment="Top" Width="55" Source="/Resources/Images/logo-instagram-png-2430.png" MouseLeftButtonUp="Instagram_MouseLeftButtonUp" MouseEnter="Instagram_MouseEnter" MouseLeave="Instagram_MouseLeave" Canvas.Left="985" Canvas.Top="902"/>
+        <Image x:Name="Twitter" HorizontalAlignment="Center" Height="56" VerticalAlignment="Top" Width="56" Source="/Resources/Images/logo-twitter-png-5859.png" MouseLeftButtonUp="Twitter_MouseLeftButtonUp" MouseEnter="Twitter_MouseEnter" MouseLeave="Twitter_MouseLeave" Canvas.Left="932" Canvas.Top="901"/>
+
+    </Canvas>
+</Page>
