--- a/InitialProject/InitialProject/View/Guest1/MoveReservationForm.xaml
+++ b/InitialProject/InitialProject/View/Guest1/MoveReservationForm.xaml
@@ -1,18 +1,35 @@
-﻿<Window x:Class="TravelAgency.View.Guest1.MoveReservationForm"
+﻿<Page x:Class="TravelAgency.View.Guest1.MoveReservationForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View.Guest1"
-        mc:Ignorable="d"
-        Title="MoveReservationForm" Height="450" Width="800">
-    <Grid>
-        <Button x:Name="btnRequest" Content="Request" HorizontalAlignment="Left" Margin="27,292,0,0" VerticalAlignment="Top" Click="Button_Click_1"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" Margin="450,332,0,0" VerticalAlignment="Top" Click="Button_Click"/>
-        <DataGrid x:Name="DataPanel"  Margin="10,10,311,171" Loaded="OnLoad" SelectionChanged="DataPanel_SelectionChanged"/>
-        <DatePicker x:Name="NewStartDate" HorizontalAlignment="Left" Margin="562,96,0,0" VerticalAlignment="Top" Height="41" Width="180" SelectedDateChanged="NewStartDate_SelectedDateChanged"/>
-        <DatePicker x:Name="NewEndDate" HorizontalAlignment="Left" Margin="562,159,0,0" VerticalAlignment="Top" Height="45" Width="180" SelectedDateChanged="NewEndDate_SelectedDateChanged"/>
-        <Button Content="Cancel Reservation" HorizontalAlignment="Left" Margin="27,327,0,0" VerticalAlignment="Top" Click="Button_Click_2"/>
+        mc:Ignorable="d" Height="516" Width="1284">
+    <Canvas Background="White">
+        <Button x:Name="btnRequest" FontSize="20" Content="Submit request" HorizontalAlignment="Left" VerticalAlignment="Center" Click="Button_Click_1" Canvas.Left="471" Canvas.Top="432" Width="179"/>
+        <DataGrid ItemsSource="{Binding Reservations}" SelectedItem="{Binding SelectedReservation}" AutoGenerateColumns="False" FontSize="16" Loaded="OnLoad" SelectionChanged="DataPanel_SelectionChanged" Height="159" Canvas.Top="30" Width="1284" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="*" Header="Name" Binding="{Binding Hotel.Name}"/>
+                <DataGridTextColumn Width="*" Header="City" Binding="{Binding Hotel.City}"/>
+                <DataGridTextColumn Width="*" Header="Country" Binding="{Binding Hotel.Country}"/>
+                <DataGridTextColumn Width="*" Header="Type" Binding="{Binding Hotel.TypeOfHotel}"/>
+                <DataGridTextColumn Width="*" Header="Number of guests" Binding="{Binding NumberOfGuests}"/>
+                <DataGridTextColumn Width="*" Header="Number of days" Binding="{Binding NumberOfDays}"/>
+                <DataGridTextColumn Width="*" Header="Start date" Binding="{Binding StartDate}"/>
+                <DataGridTextColumn Width="*" Header="End date" Binding="{Binding EndDate}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <DatePicker x:Name="NewStartDate" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Height="41" Width="180" SelectedDateChanged="NewStartDate_SelectedDateChanged" Canvas.Left="148" Canvas.Top="380"/>
+        <DatePicker x:Name="NewEndDate" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Height="41" Width="180" SelectedDateChanged="NewEndDate_SelectedDateChanged" Canvas.Left="471" Canvas.Top="380"/>
+        <Button Content="Cancel Reservation" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" Click="Button_Click_2" Canvas.Top="197" Canvas.Left="613" Width="176"/>
+        <Label Content="List of all your active reservations:" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Top="-2"/>
+        <Label Content="If you want to cancel reservation choose it and then click the button" FontSize="20" Canvas.Top="194"/>
+        <Label Content="Submit a date change request to the accommodation owner:" FontSize="20" Canvas.Top="308" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label FontSize="20" Content="If you want to change the date of arival of your reservation, choose it on the list, also choose dates then click the Request button" Canvas.Top="342" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="New start date:" FontSize="20" Canvas.Top="382" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label Content="New end date:" FontSize="20" Canvas.Top="382" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="333"/>
+        <Button Content="Show status of requests" FontSize="20" Canvas.Top="478" HorizontalAlignment="Center" VerticalAlignment="Top" Width="234" Click="Button_Click"/>
+        <Rectangle Height="168" Stroke="Black" Canvas.Top="303" Width="1284" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
-    </Grid>
-</Window>
+    </Canvas>
+</Page>
