--- a/InitialProject/InitialProject/View/Guest1/OpenedForum.xaml
+++ b/InitialProject/InitialProject/View/Guest1/OpenedForum.xaml
@@ -9,7 +9,7 @@
     <Canvas Background="White">
         <Rectangle Height="493" Stroke="Black" Width="1590" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Page:" FontSize="20" Canvas.Left="10" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Button Content="Add comment" FontSize="20" Canvas.Left="1450" Canvas.Top="502" Click="Button_Click"/>
+        <Button Content="Add comment" FontSize="20" Canvas.Left="1440" Canvas.Top="502" Click="Button_Click" HorizontalAlignment="Left" VerticalAlignment="Center" Width="140"/>
         <Button Content="Next page" FontSize="20" Canvas.Left="284" Canvas.Top="502" HorizontalAlignment="Center" VerticalAlignment="Top" Width="116"/>
         <Line X1="0" Y1="0" X2="1590" Y2="0" Stroke="Black" StrokeThickness="2" Canvas.Top="244" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="10" Width="1578" />
         <Rectangle Height="474" Canvas.Left="10" Stroke="Black" Canvas.Top="10" Width="235" HorizontalAlignment="Center" VerticalAlignment="Top"/>
