--- a/InitialProject/InitialProject/View/SignInForm.xaml
+++ b/InitialProject/InitialProject/View/SignInForm.xaml
@@ -5,32 +5,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency"
         mc:Ignorable="d"
-        Title="Sign in" Height="250" Width="450" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <Grid>
-
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition Height="150"></RowDefinition>
-            <RowDefinition Height="60"></RowDefinition>
-        </Grid.RowDefinitions>
-
-        <Grid Grid.Row="1" Grid.Column="0" Width="300" Height="100">
-            <Grid.RowDefinitions>
-                <RowDefinition></RowDefinition>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-
-            <Label Grid.Row="0" Grid.Column="0" Height="30">Username:</Label>
-            <Label Grid.Row="1" Grid.Column="0" Height="30">Password:</Label>
-            <TextBox Grid.Row="0" Text="{Binding Path=Username, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Height="25" TextWrapping="Wrap" VerticalAlignment="Center"/>
-            <PasswordBox Name="txtPassword" Grid.Row="1" Grid.Column="1" Height="25" VerticalAlignment="Center"/>
-        </Grid>
-        
-        <Button Grid.Row="2" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="20" Width="60"/>
-
+        Title="Sign in" Height="1080" Width="1920" WindowState="Maximized">
+    <Grid Loaded="OnLoad">
+        <Frame NavigationUIVisibility="Hidden" x:Name="ShowOverview"/>
+        <Label x:Name="UsernameLabel" Content="Username:" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" Margin="769,488,0,0"/>
+        <Label x:Name="PasswordLabel" Content="Password:" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" Margin="769,567,0,0"/>
+        <Label Content="Dark theme" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="16" Margin="1747,43,0,0"/>
+        <TextBox x:Name="txtUsername" FontSize="20" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" Height="32" TextWrapping="Wrap" VerticalAlignment="Top" Margin="769,530,769,0"/>
+        <PasswordBox FontSize="20" x:Name="txtPassword" Height="32" VerticalAlignment="Top" Margin="769,604,769,0"/>
+        <Button x:Name="SignInButton" FontSize="20" Click="SignIn" Content="Log In" HorizontalAlignment="Center" VerticalAlignment="Top" Height="34" Width="248" Margin="0,661,0,0"/>
+        <Image x:Name="Facebook" MouseEnter="Facebook_MouseEnter" MouseLeave="Facebook_MouseLeave" MouseLeftButtonUp="Facebook_MouseLeftButtonUp" HorizontalAlignment="Left" Height="47" Margin="1038,711,0,0" VerticalAlignment="Top" Width="46" Source="/Resources/Images/facebook-logo-493.png"/>
+        <Image x:Name="Google" MouseEnter="Google_MouseEnter" MouseLeave="Google_MouseLeave" MouseLeftButtonUp="Google_MouseLeftButtonUp" HorizontalAlignment="Left" Height="48" Margin="836,710,0,0" VerticalAlignment="Top" Width="48" Source="/Resources/Images/googleLogo.png"/>
+        <Image x:Name="Logo" Margin="592,171,592,581" Source="/Resources/Images/Ta2.jpg"/>
+        <ToggleButton Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="1851,49,0,0" Width="47">
+            <ToggleButton.Template>
+                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <Grid>
+                        <Border Background="#EEEEEE" CornerRadius="10" BorderThickness="1" BorderBrush="#DCDCDC">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                        <Ellipse x:Name="Switch" Fill="White" Width="14" Height="14" HorizontalAlignment="Left" Margin="5,4,0,4">
+                            <Ellipse.RenderTransform>
+                                <TranslateTransform X="0"/>
+                            </Ellipse.RenderTransform>
+                        </Ellipse>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="Switch" Property="Fill" Value="#C5E1A5"/>
+                            <Setter TargetName="Switch" Property="RenderTransform">
+                                <Setter.Value>
+                                    <TranslateTransform X="22"/>
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="False">
+                            <Setter TargetName="Switch" Property="Fill" Value="white"/>
+                            <Setter TargetName="Switch" Property="RenderTransform">
+                                <Setter.Value>
+                                    <TranslateTransform X="0"/>
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </ToggleButton.Template>
+        </ToggleButton>
+        <ComboBox x:Name="cbLanguage" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top" Height="32" Margin="1751,79,0,0" Width="147">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Resources/Images/language.png" Width="24" Height="24" Margin="0,0,5,0"/>
+                        <TextBlock Text="{Binding}" />
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <Image x:Name="Booking" MouseEnter="Booking_MouseEnter" MouseLeave="Booking_MouseLeave" MouseLeftButtonUp="Booking_MouseLeftButtonUp" HorizontalAlignment="Center" Height="48" Margin="0,709,0,0" VerticalAlignment="Top" Width="48" Source="/Resources/Images/BookingLogo.png"/>
+        <Label x:Name="ValidUser" Content="*Wrong username or password" FontSize="20" HorizontalAlignment="Left" Margin="1172,602,0,0" VerticalAlignment="Top" Foreground="Red"/>
     </Grid>
 </Window>
