--- a/InitialProject/InitialProject/View/Guest1/AccountSettingsPage.xaml
+++ b/InitialProject/InitialProject/View/Guest1/AccountSettingsPage.xaml
@@ -4,15 +4,17 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TravelAgency.View.Guest1"
-      mc:Ignorable="d" Height="516" Width="1284">
+      mc:Ignorable="d" Height="516" Width="1284"
+      Loaded="Page_Loaded">
+
     <Canvas Background="White">
         <Button x:Name="Logout" Content="Log out" Width="139" FontSize="20" Canvas.Left="1146" Canvas.Top="484" Click="LogoutClick" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Period of time you want check:" FontSize="20" Canvas.Left="906" Canvas.Top="6" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Content="-" FontSize="20" Canvas.Left="1076" Canvas.Top="45" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <DatePicker x:Name="StartDate" Canvas.Left="910" Canvas.Top="48" FontSize="20" Width="160" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <DatePicker x:Name="EndDate" Canvas.Left="1101" Canvas.Top="48" FontSize="20" Width="160" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button Content="Report of every made resevation" FontSize="20" Canvas.Left="910" Canvas.Top="92" Width="351" HorizontalAlignment="Left" VerticalAlignment="Center" Click="Button_Click"/>
-        <Button Content="Report of every canceled resevation" FontSize="20" Canvas.Left="909" Canvas.Top="132" Width="352" HorizontalAlignment="Left" VerticalAlignment="Center" Click="Button_Click_1"/>
+        <Button x:Name="MadeReservation" Content="Report of every made resevation" FontSize="20" Canvas.Left="910" Canvas.Top="92" Width="351" HorizontalAlignment="Left" VerticalAlignment="Center" Click="Button_Click"/>
+        <Button x:Name="CanceledReservation" Content="Report of every canceled resevation" FontSize="20" Canvas.Left="909" Canvas.Top="132" Width="352" HorizontalAlignment="Left" VerticalAlignment="Center" Click="Button_Click_1"/>
         <Label Content="First name:" FontSize="18" Canvas.Left="333" Canvas.Top="27" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Last name:" FontSize="18" Canvas.Left="335" Canvas.Top="62" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Label Content="Username:" FontSize="18" Canvas.Left="335" Canvas.Top="97" HorizontalAlignment="Center" VerticalAlignment="Top"/>
